# ProjectSoftwareEngineeringUA

./: CMakeLists.txt  errors.txt  expectedDeviceListOutput.txt  expectedErrors.txt  expectedJobListOutput.txt  expectedOutput.txt  expectedStatusReport.txt  main.cpp  output.txt  simple_computation.txt  status_report.txt
XMLDataVoorTests/: NoCost.xml  NoData.XML  NoEmissions.xml  NoJobNumber.XML  NoJobType.XML  NoName.xml  NoSpeed.XML  NoTypeDevice.xml  NoUserName.XML  TestLoadSuccess.xml  ValidData.XML  data.xml  dataTypes.xml  dataTypesAutomated.xml  noPageCount.XML  testAutomatedProcess.xml  testManualProcess.xml
expectedErrors/: noEmissionsExpected.txt  noJobNumberExpected.txt  noNameExpected.txt  noPageCountExpected.txt  noSpeedExpected.txt  noUserNameExpected.txt
src/: DesignByContract.h  Device.cpp  Device.h  EmissionsManager.cpp  EmissionsManager.h  Job.cpp  Job.h  PrintSystem.cpp  PrintSystem.h  Printer.cpp  Printer.h  PrinterSystem.cpp  PrinterSystem.h  StatusReport.cpp  StatusReport.h  SystemProcessing.cpp  SystemProcessing.h  Tests.cpp  XMLPrinterSystemReader.cpp  XMLPrinterSystemReader.h  loggerClass.cpp  loggerClass.h  main.cpp  tests.cpp
src/XMLREADER/: XMLREADER.txt  XMLReader.cpp  XMLReader.h  data.xml  main.txt
testFolder/: CMakeLists.txt  Device.cpp  Device.h  Job.cpp  Job.h  StatusReport.cpp  StatusReport.h  SystemProcessing.cpp  SystemProcessing.h  main.cpp  status_report.txt
testFolder/XMLREADER/: CMakeLists.txt  XMLReader.cpp  XMLReader.h  data.xml  workingCodesCompilations(tested).txt
